# flow-manager

./: .gitignore  .pre-commit-config.yaml  README.md  postman_collection.json  pyproject.toml
src/flow_manager_task/: api.py  cli.py  engine.py  models.py  registry.py  schemas.py  service.py  validator.py
src/flow_manager_task/api/: __init__.py  routes.py  schemas.py
src/flow_manager_task/application/: schemas.py  service.py
src/flow_manager_task/domain/: engine.py  models.py  validator.py
src/flow_manager_task/tasks/: __init__.py  task1.py  task2.py  task3.py
tests/: conftest.py  test_api.py  test_engine.py  test_models.py  test_service.py
