[project]
name = "flow-manager-task"
version = "0.1.0"
description = "State-machine based flow manager microservice"
readme = "README.md"
authors = [
    { name = "David Filat", email = "david.filat@eurasiaprecept.org" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[project.scripts]
flow-manager-task = "flow_manager_task.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/flow_manager_task/api.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=flow_manager_task --cov-report=term-missing"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
